<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#FFFFCC"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headLayout"
        android:orientation="horizontal"
        >

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="35dp"-->
<!--            android:textColor="@color/color2"-->
<!--            android:textFontWeight="@android:integer/config_longAnimTime"-->
<!--            android:textSize="30sp"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/edit_title_text"-->
<!--            />-->

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="20sp"
            ></TextView>
        <LinearLayout
            android:id="@+id/edit_title_lay_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >


            <TextView
                android:id="@+id/edit_title_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="textEnd"
                android:hint="@string/edit_title_time_hint"
                android:gravity="end" />

            <LinearLayout
                android:id="@+id/edit_title_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tile"
                    android:textSize="20sp"
                    />
                <EditText
                    android:id="@+id/edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:hint="@string/edit_hint"

                    />
            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/edit_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/button_save"
            android:layout_below="@id/edit_title_lay_lay"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/edit_body_hint"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/button_back"
            android:textColor="@color/color2"
            android:textSize="40sp"
            android:theme="@style/RippleWhite"
            android:background="@drawable/button"



            />
<!--         分割线 隐藏起来-->
        <Button
            android:id="@+id/btn_edit_menu"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            />
        <Button
            android:id="@+id/btn_edit_menu_notice"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:text="@string/str_notice"
            android:textSize="25sp"
            android:theme="@style/RippleWhite"
            android:background="@drawable/button"
            />

        <Button
            android:id="@+id/button_save"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/button_save"
            android:textColor="@color/color2"
            android:theme="@style/RippleWhite"
            android:background="@drawable/button"
            android:textSize="30sp"
            />
    </RelativeLayout>
</LinearLayout>